--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.whitelabel.enabled=false
 logging.level.org.springframework.web=DEBUG
